# oc20-experiment

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  data_structures.py  demo_oc20_loading.py  example_usage.py  main.py  periodic_set_transformer.py  pyproject.toml  s2ef_data_ingestion.py  train_with_oc20.py  updated_s2ef_data_ingestion.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.yml
dockerfiles/: Dockerfile.s2ef
examples/: basic_forward.py
scripts/: config.py  modal_train_s2ef.py  train_s2ef.py
scripts/configs/: baseline.yaml  default.yaml  exp_large_baseline.yaml  exp_medium_baseline.yaml  exp_medium_batch_large.yaml  exp_medium_batch_small.yaml  exp_medium_dropout_high.yaml  exp_medium_dropout_none.yaml  exp_medium_lr_high.yaml  exp_medium_lr_low.yaml  exp_medium_lr_mid.yaml  exp_small_baseline.yaml  small_run.yaml  smoke_test.yaml
src/oc20_exp/: __init__.py  data_structures.py
src/oc20_exp/data/: __init__.py  oc20_data_loader.py
src/oc20_exp/data/s2ef/: __init__.py  convert.py  io.py  persist.py  pipeline.py  types.py
src/oc20_exp/models/: __init__.py  periodic_set_transformer.py
src/oc20_exp/train/: __init__.py
src/oc20_exp/types/: __init__.py  data_structures.py
src/oc20_exp/utils/: __init__.py  logging.py
tests/: test_models_pst.py  test_persist_small.py  test_s2ef_convert.py  test_s2ef_io.py  test_shims.py
