[project]
name = "oc20-exp"
version = "0.1.0"
description = "Periodic Set Transformer for OC20 dataset experiments"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "numpy<= 2",
    "torch>=2.8.0",
    "einops>=0.6.0",
    # OC20 data loading dependencies
    "ase>=3.19.1",
    "lmdb>=1.0.0",
    # Optional but recommended
    "pymatgen>=2020.4.2",
    "tqdm>=4.0.0",
    "fairchem-core>=1.0.0",
    "torch-geometric>=2.6.1",
    "torch-scatter",
    "modal>=1.1.4",
    "fire>=0.7.1",
]

[project.optional-dependencies]
fairchem = [
    "fairchem-core>=1.0.0",
]
wandb = [
    "wandb>=0.15.0",
]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "mypy>=1.8.0",
    "bandit[toml]>=1.7.0",
    "interrogate>=1.7.0",
    "types-PyYAML>=6.0.0",
    "types-tqdm>=4.66.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oc20_exp = ["py.typed"]

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip strict parameter (requires Python 3.10+)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ase.*",
    "lmdb.*",
    "pymatgen.*",
    "fairchem.*",
    "torch_geometric.*",
    "torch_scatter.*",
    "einops.*",
    "fire.*",
    "modal.*",
    "h5py.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "scripts/temp_processed"]
skips = [
    "B101",  # Skip assert_used check (common in tests)
    "B301",  # Skip pickle warnings (torch uses pickle internally)
    "B614",  # Skip pytorch_load_save warnings (standard ML practice)
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-module = true
fail-under = 50
exclude = ["tests", "examples", "scripts/demo_*", "scripts/example_*"]
verbose = 1
quiet = false
color = true
